# TinyProfiler

./: CMakeLists.txt  README.md  main.cpp  profiler.cpp  profiler_impl.h  trie.cpp  trie.h
include/: profiler_impl.h
src/: main.cpp  profiler.cpp  trie.cpp
